--- a/config/settings.php.dist
+++ b/config/settings.php.dist
@@ -1,29 +1,29 @@
-#<?php exit; ?>
+;<?php exit; ?>
 web_path=""
 log_path="/var/log/archie"
 
-# Site you are currently at
+; Site you are currently at
 site=SITE
-# This is the root of the attached/fs data
+; This is the root of the attached/fs data
 data_root="/var/www/content"
 
-# Operational stuff
-## This is the number of records per page
+; Operational stuff
+;; This is the number of records per page
 page_limit = 250
 
-## Use RAM to avoid MySQL queries
-## It is recommended to turn this on, only turn it off if
-## you are getting out of memeory errors
+; Use RAM to avoid MySQL queries
+; It is recommended to turn this on, only turn it off if
+; you are getting out of memeory errors
 memory_cache = "true"
 
-# Database Related Settings
+; Database Related Settings
 database_username=username
 database_password=password
 database_hostname=localhost
 database_name=archie
 
-# Session related settings, don't change this unless you know
-# what you're doing
+; Session related settings, don't change this unless you know
+; what you're doing
 session_name=archie
 remember_length=144000
 session_length=86400
