--- a/config/settings.php.dist
+++ b/config/settings.php.dist
@@ -1,10 +1,16 @@
 ;<?php exit; ?>
 [main]
+; Current Config version, used internally to determine if config file needs to be updated
+config_version=0.01
+
+; The path to your Archie install, if Archie is installed in a sub-directory (http://localhost/archie) then 
+;; The value of this should be /archie. If it's installed in the root then leave it blank
 web_path=
+
+; Path where Archie will try to log events, must be writeable by the webserver
+;; This can contain sensitive information, and should not be inside the web space
 log_path=/var/log/archie
 
-; Site you are currently at
-site=SITE
 ; This is the root of the attached/fs data
 data_root=/var/www/content
 
