--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,11 @@ php:
   - "5.5"
   - "5.4"
   - "5.3"
+before_install:
+  - mysql -u root -e "CREATE DATABASE IF NOT EXISTS `archie`;"
 before_script:
   - chmod +x test/syntax-check
+  - mysql -u root archiedb < test/test_db.sql
  
 script:
   - test/syntax-check
