--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ php:
   - "5.4"
   - "5.3"
 before_install:
-  - mysql -u root -e "CREATE DATABASE IF NOT EXISTS `archie`;"
+  - mysql -u root -e "CREATE DATABASE IF NOT EXISTS archie;"
 before_script:
   - chmod +x test/syntax-check
-  - mysql -u root archiedb < test/test_db.sql
+  - mysql -u root archie < test/test_db.sql
  
 script:
   - test/syntax-check
