--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
 before_script:
   - chmod +x test/syntax-check
   - mysql -u root archie < test/test_db.sql
+  - cp test/test_settings.php config/settings.php
  
 script:
   - test/syntax-check
