--- a/htaccess.dist
+++ b/htaccess.dist
@@ -2,4 +2,4 @@ Options FollowSymlinks
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /index.php [L]
+RewriteRule ^(.*)$ /index.php [L]
