--- a/bin/backup/backup.cfg.php.dist
+++ b/bin/backup/backup.cfg.php.dist
@@ -6,15 +6,21 @@
 tmpdir = /var/www/bin/backup/tmp
 
 [google]
+; Settings Relating to Google-drive backups
 
-; Collection
-; The Folder/Collection that files should be uploaded into
-collection = Archie
+; serviceEmail
+; E-mail address of your service account
+serviceEmail = nowhere@nobody
 
-; Username
-; Your Google Account Username
-username = username
+; privateKey
+; Full path to your privateKey for the service account
+privateKey = /path/to/nowhere
 
-; Password
-; Your Google Account Password
-password = password
+; folderID
+; ID of the folder that we should be backing up to
+folderID = 1337
+
+; credentialsStorage
+; Full path to the json credentials Storage you downloaded
+; From the google developers website
+credentialsStorage = /path/to/nowhere
